# proyectopoo

./: Animal.cpp  Animal.h  CMakeLists.txt  Celda.cpp  Celda.h  CriaturaBase.cpp  CriaturaBase.h  Ecosistema.cpp  Ecosistema.h  Mapa.cpp  Mapa.h  Planta.cpp  Planta.h  README.md  calificaciones.md  glorbo.cpp  glorbo.h  jirafa.cpp  jirafa.h  main.cpp
